--- a/src/main/resources/public/css/add_commodity.css
+++ b/src/main/resources/public/css/add_commodity.css
@@ -28,7 +28,7 @@ button {
 }
 
 #add-commodity-btn {
-    background-color: #090909;
+    background-color: forestgreen;
     color: white;
     border: none;
     padding: 10px 20px;
