--- a/src/main/resources/public/css/cart.css
+++ b/src/main/resources/public/css/cart.css
@@ -70,7 +70,7 @@ h1 {
 .product-actions li a {
     display: block;
     padding: 10px;
-    background-color: #333;
+    background-color: #3e8e41;
     color: #fff;
     text-decoration: none;
     border-radius: 5px;
