--- a/src/main/resources/public/css/order.css
+++ b/src/main/resources/public/css/order.css
@@ -39,7 +39,7 @@ li:not(:last-child) {
 li a {
     display: block;
     padding: 10px;
-    background-color: #333;
+    background-color: #3e8e41;
     color: #fff;
     text-decoration: none;
     border-radius: 5px;
