--- a/src/main/resources/public/css/promotions.css
+++ b/src/main/resources/public/css/promotions.css
@@ -58,7 +58,7 @@ h1 {
     display: block;
     margin-top: 10px;
     padding: 5px;
-    background-color: #333;
+    background-color: #3e8e41;
     color: #fff;
     text-decoration: none;
     border-radius: 5px;
