--- a/src/main/resources/public/css/password.css
+++ b/src/main/resources/public/css/password.css
@@ -38,7 +38,7 @@ input[type="button"] {
     padding: 5px;
     border-radius: 5px;
     border: none;
-    background-color: #333;
+    background-color: #3e8e41;
     color: #fff;
     font-weight: bold;
     cursor: pointer;
